robert-server-ws-rest/src/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robert-ws-deployment
  namespace: robert-ws
  labels:
    app: robert-ws
spec:
  selector:
    matchLabels:
      app: robert-ws
  template:
    metadata:
      labels:
        app: robert-ws
    spec:
      containers:
        - name: robert-ws-app
          image: ws-image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "2"
              memory: 2Gi
            limit:
              cpu: "2"
              memory: 2Gi
      imagePullSecrets:
        - name: poc-inttac-poc-img-push-pull-secret
      nodeSelector:
        caascad.io/nodepool: "pod-tac"
