robert-server-ws-rest/src/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: robert-ws
  name: robert-ws-service
  namespace: robert-ws
spec:
  selector:
    app: robert-ws
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: management
      port: 8081
      targetPort: 8081
      protocol: TCP
